api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  type: NodePort
  selector:
    app: synergychat-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080 # This is the port pods are listening on
      nodePort: 30080
